--- a/Templates/Detail.cshtml
+++ b/Templates/Detail.cshtml
@@ -7,34 +7,50 @@
 
     string value = Request.QueryString["CCode"];
 
-    //@value;
+    string dbQuery = "SELECT *, city.Population as 'CityPop', city.Name as 'CityName' FROM country INNER JOIN city ON city.ID= country.Capital WHERE country.code='" + value + "'"; //SQL Join City & Country
 
-          foreach (var dbRow in db.Query("SELECT * FROM country WHERE code='" + value + "'"))
-          {
+    foreach (var dbRow in db.Query(dbQuery))
+    {
 
-              string dbRowName = dbRow.Name;
-              string Name = dbRowName.TrimEnd();
+        string CountryName = dbRow.Name.TrimEnd();
 
-              var dbRowSurfaceArea = dbRow.SurfaceArea;
-              string SurfaceArea = dbRowSurfaceArea.ToString("n");
+        string CCode = dbRow.Code.TrimEnd();
 
-              string mapURL = "https://www.google.co.uk/maps/place/" + Name;
-              string flagURL = "http://www.sciencekids.co.nz/images/pictures/flags96/" + Name + ".jpg";
+        string SurfaceArea = dbRow.SurfaceArea.ToString("n");
+
+        //string mapURL = "https://www.google.co.uk/maps/place/" + CountryName;
+
+        string flagURL = "http://www.sciencekids.co.nz/images/pictures/flags96/" + CountryName.Replace(" ", "_") + ".jpg"; //Replaces spaces with underscores for better accuracy
+
+        // New DB ROWs
+
+        string CountryPop = dbRow.Population.ToString("n");
+        string CityPop = dbRow.CityPop.ToString("n");
+
+        string CountryCapital = dbRow.CityName;
 
 
-            <div class="col-md-3">
-               
+        <div class="col-md-12">
+
+            <div class="col-md-6">
+                <h1>@CountryName</h1>
                 <img src="@flagURL" onerror="this.src = 'http://www.placehold.it/96x69'" />
-                <h1>@Name</h1>
+
                 <p>Surface Area: @SurfaceArea </p>
-                <a href="@mapURL">Map</a>
+
+                <p>Population: @CountryPop</p>
+                <p>Capital City: @CountryCapital with a Population of @CityPop</p>
                 
-                <iframe width="600" height="450" frameborder="0" style="border:0"
-                        src="https://www.google.com/maps/embed/v1/place?q=@Name&key=AIzaSyDHPO6bNG225SK_Jnohf4xQtC-1Ew4V-Ec">
-                </iframe>
             </div>
 
-          }
+            <div class="col-md-6">
+
+                <iframe width="100%" height="450" frameborder="0" style="border:0"
+                        src="https://www.google.com/maps/embed/v1/place?q=@CountryName&key=AIzaSyDHPO6bNG225SK_Jnohf4xQtC-1Ew4V-Ec"></iframe>
+            </div>
+        </div>
+
+    }
 
 }
 
